crates/tesshir/tests/fixtures/check/associated_const_impl_type_mismatch.tess
interface Buffer {
    const SIZE: usize;
}

struct Page {}

impl Buffer for Page {
    const SIZE: u8 = 1;
}
